# esp32

./: README.md
C++_project_template/: README.md
C++_project_template/components/component1/: CMakeLists.txt  test.cpp  test.h
C++_project_template/components/component2/: CMakeLists.txt
C++_project_template/main/: main.cpp
C_project_template/: README.md
C_project_template/components/component1/: CMakeLists.txt  test.c  test.h
Examples/serial_echo/components/serial/: CMakeLists.txt  serial_dev.c  serial_dev.h
Examples/serial_echo/main/: main.c
