idf_component_register(
                    SRCS
                    "test.cpp"
                    # "src.c"

                    INCLUDE_DIRS
                    "."
                    # "include"

                    REQUIRES
                    # component
                    
                    PRIV_REQUIRES
                    # component
                    )
