idf_component_register(
                        SRCS
                        # "src.c"
                        "test.c"

                        INCLUDE_DIRS
                        # "include"
                        "."

                        REQUIRES
                        # component

                        PRIV_REQUIRES
                        # component
                        )
